# Duckdb-dbt-evidence-insights

./: .gitignore  README.md  demo-pypi-exemplo.json  exemplo.env  pyproject.toml
.github/workflows/: CI.yml
ingestion/: bigquery.py  duck.py  log_config.py  models.py  pipeline.py
tests/: sample.csv  test_models.py
