[tool.poetry]
name = "duckdb-dbt-evidence-insights"
version = "0.1.0"
description = ""
authors = ["Luciano Filho <lvgalvaofilho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
duckdb = "^0.9.2"
google-cloud-bigquery = "^3.17.1"
google-auth = "^2.27.0"
google-cloud-bigquery-storage = "^2.24.0"
pyarrow = "^15.0.0"
pandas = "^2.2.0"
fire = "^0.5.0"
loguru = "^0.7.2"
pydantic = "^2.6.0"
pytest = "^8.0.0"
ruff = "^0.2.0"
taskipy = "^1.12.2"
db-dtypes = "^1.2.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = """
export $(cat .env | xargs)
poetry run python3 -m ingestion.pipeline \
		--start_date $START_DATE \
		--end_date $END_DATE \
		--pypi_project $PYPI_PROJECT \
		--table_name $TABLE_NAME \
		--s3_path $S3_PATH \
		--aws_profile $AWS_PROFILE \
		--gcp_project $GCP_PROJECT \
		--timestamp_column $TIMESTAMP_COLUMN \
		--destination $DESTINATION
"""
format = "ruff format ."
test = "pytest tests -v --disable-pytest-warnings"